test/corpus/blocks.txt
================================================================================
Blocks: if/rept/for/macro
================================================================================

; If / elif / else
IF 1
    ld a, 1
ELIF 0
    ld a, 2
ELSE
    ld a, 3
ENDC

; Nested REPT and FOR
REPT 2
    FOR i, 0, 3
        db i
    ENDR
ENDR

; Simple macro
MACRO MYMACRO
    ld a, arg
ENDM

---

(source_file
  (inline_comment)
  (directive
    (if_block
      (directive_keyword)
      (expression
        (number_literal))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (register))
            (expression
              (number_literal)))))
      (elif_clause
        (directive_keyword)
        (expression
          (number_literal))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (expression
                (register))
              (expression
                (number_literal))))))
      (else_clause
        (directive_keyword)
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (expression
                (register))
              (expression
                (number_literal))))))
      (directive_keyword)))
  (inline_comment)
  (directive
    (rept_block
      (directive_keyword)
      (expression
        (number_literal))
      (directive
        (for_block
          (directive_keyword)
          (expression
            (symbol))
          (expression
            (number_literal))
          (expression
            (number_literal))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (symbol)))))
          (directive_keyword)))
      (directive_keyword)))
  (inline_comment)
  (directive
    (macro_definition
      (directive_keyword)
      (expression
        (symbol))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (register))
            (expression
              (symbol)))))
      (directive_keyword))))

================================================================================
Blocks: Global label with uniqueness affix
================================================================================

if\@:
.local\@:
.local\@

---

(source_file
  (global_label_block
    (label)
    (local_label_block
      (local))
    (local_label_block
      (local))))

================================================================================
Blocks: macro arguments and escapes
================================================================================

MACRO USE_ARGS
    ld \1, (\2)
    db \<10>, \<-1>
if\@:
Global.local\@:
    PRINTLN Global\@
    PRINTLN Global.local\@
.loop\@:
    jr .loop\@
    PRINTLN \#
ENDM


---

(source_file
  (directive
    (macro_definition
      (directive_keyword)
      (expression
        (symbol))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (macro_argument))
            (expression
              (expression
                (macro_argument))))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (macro_argument))
            (expression
              (macro_argument)))))
      (global_label_block
        (label)
        (local_label_block
          (local)
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (symbol)))))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (local))))))
        (local_label_block
          (local)
          (instruction_list
            (instruction
              (instruction_name)
              (operand_list
                (expression
                  (local)))))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (macro_arguments_spread)))))))
      (directive_keyword))))

================================================================================
Blocks: SHIFT directive in macros and REPT
================================================================================

MACRO SHIFTING
    PRINTLN \1, \2, \3
    SHIFT
    PRINTLN \1, \2
    SHIFT -1
    PRINTLN \1
ENDM

REPT 2
    SHIFT 2
ENDR

---

(source_file
  (directive
    (macro_definition
      (directive_keyword)
      (expression
        (symbol))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (macro_argument))
            (expression
              (macro_argument))
            (expression
              (macro_argument)))))
      (directive
        (simple_directive
          (directive_keyword)))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (macro_argument))
            (expression
              (macro_argument)))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (unary_expression
                (expression
                  (number_literal)))))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (macro_argument)))))
      (directive_keyword)))
  (directive
    (rept_block
      (directive_keyword)
      (expression
        (number_literal))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (directive_keyword))))

================================================================================
Blocks: BREAK in FOR block
================================================================================

FOR V, 1, 100
    PRINT "{d:V}"
    IF V == 5
        PRINT " stop! "
        BREAK
    ENDC
    PRINT ", "
ENDR

---

(source_file
  (directive
    (for_block
      (directive_keyword)
      (expression
        (symbol))
      (expression
        (number_literal))
      (expression
        (number_literal))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal
                (interpolation
                  (format_spec)
                  (interpolation_content)))))))
      (directive
        (if_block
          (directive_keyword)
          (expression
            (binary_expression
              (expression
                (symbol))
              (expression
                (number_literal))))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (string_literal)))))
          (directive
            (simple_directive
              (directive_keyword)))
          (directive_keyword)))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal)))))
      (directive_keyword))))

================================================================================
Blocks: BREAK in REPT block
================================================================================

REPT 10
    db 1
    IF _NARG > 5
        BREAK
    ENDC
ENDR

---

(source_file
  (directive
    (rept_block
      (directive_keyword)
      (expression
        (number_literal))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (directive
        (if_block
          (directive_keyword)
          (expression
            (binary_expression
              (expression
                (constant))
              (expression
                (number_literal))))
          (directive
            (simple_directive
              (directive_keyword)))
          (directive_keyword)))
      (directive_keyword))))

================================================================================
Blocks: nested loops with BREAK
================================================================================

REPT 3
    FOR i, 1, 10
        IF i == 5
            BREAK
        ENDC
    ENDR
ENDR

---

(source_file
  (directive
    (rept_block
      (directive_keyword)
      (expression
        (number_literal))
      (directive
        (for_block
          (directive_keyword)
          (expression
            (symbol))
          (expression
            (number_literal))
          (expression
            (number_literal))
          (directive
            (if_block
              (directive_keyword)
              (expression
                (binary_expression
                  (expression
                    (symbol))
                  (expression
                    (number_literal))))
              (directive
                (simple_directive
                  (directive_keyword)))
              (directive_keyword)))
          (directive_keyword)))
      (directive_keyword))))

================================================================================
Blocks: UNION / NEXTU / ENDU
================================================================================

UNION
    db 1
NEXTU
    db 2, 3
ENDU

---

(source_file
  (directive
    (union_block
      keyword: (directive_keyword)
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (nextu_block
        keyword: (directive_keyword)
        (directive
          (simple_directive
            keyword: (directive_keyword)
            (argument_list
              (expression
                (number_literal))
              (expression
                (number_literal))))))
      end: (directive_keyword))))

================================================================================
Blocks: UNION nested inside REPT/IF
================================================================================

REPT 2
    UNION
        IF 1
            db 9
        ENDC
    NEXTU
        db 7
    ENDU
ENDR

---

(source_file
  (directive
    (rept_block
      keyword: (directive_keyword)
      count: (expression
        (number_literal))
      (directive
        (union_block
          keyword: (directive_keyword)
          (directive
            (if_block
              keyword: (directive_keyword)
              condition: (expression
                (number_literal))
              (directive
                (simple_directive
                  keyword: (directive_keyword)
                  (argument_list
                    (expression
                      (number_literal)))))
              end: (directive_keyword)))
          (nextu_block
            keyword: (directive_keyword)
            (directive
              (simple_directive
                keyword: (directive_keyword)
                (argument_list
                  (expression
                    (number_literal))))))
          end: (directive_keyword)))
      end: (directive_keyword))))

================================================================================
Blocks: LOAD / ENDL
================================================================================

SECTION "LOAD example", ROMX
LOAD "RAM code", WRAM0
  RAMLocation:
      ld hl, .string
      ld de, $9864
      jr [[ db 1 ]]
  .string
      db "Hello"
ENDL

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (load_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (global_label_block
        (label)
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (expression
                (register))
              (expression
                (local)))))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (expression
                (register))
              (expression
                (number_literal)))))
        (instruction_list
          (instruction
            (instruction_name)
            (operand_list
              (expression
                (fragment_literal
                  (directive
                    (simple_directive
                      (directive_keyword)
                      (argument_list
                        (expression
                          (number_literal))))))))))
        (local_label_block
          (local)
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (string_literal)))))))
      (directive_keyword))))

================================================================================
Blocks: LOAD closed by SECTION
================================================================================

LOAD "Another section", VRAM
nop
SECTION "Main", ROM0

---

(source_file
  (load_block
    (directive_keyword)
    (string_literal)
    (section_type)
    (instruction_list
      (instruction
        (instruction_name)))
    (directive_keyword))
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))))

================================================================================
Blocks: PUSHS / POPS basic usage
================================================================================

SECTION "Code", ROM0
PUSHS "Data", ROM0
    db $FF
POPS

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (directive_keyword))))

================================================================================
Blocks: PUSHS with label blocks
================================================================================

SECTION "Main", ROM0
PUSHS "Variables", WRAM0
wAnswer: db
wQuestion:
    ds 10
POPS

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (global_label_block
        (label)
        (directive
          (simple_directive
            (directive_keyword))))
      (global_label_block
        (label)
        (directive
          (ds_directive
            (directive_keyword)
            (expression
              (number_literal)))))
      (directive_keyword))))

================================================================================
Blocks: PUSHS with section attributes (BANK, ALIGN)
================================================================================

SECTION "Code", ROMX, BANK[1]
PUSHS "Graphics", ROMX[$4000], BANK[2]
    INCBIN "tiles.bin"
POPS

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type)
      (section_options
        (section_option
          (bank_option
            (expression
              (number_literal))))))
    (pushs_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (section_address
        (expression
          (number_literal)))
      (section_options
        (section_option
          (bank_option
            (expression
              (number_literal)))))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (string_literal)))))
      (directive_keyword))))

================================================================================
Blocks: Nested PUSHS blocks
================================================================================

SECTION "A", ROM0
PUSHS "B", ROM0
    db 1
    PUSHS "C", ROM0
        db 2
    POPS
    db 3
POPS

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (pushs_block
        (directive_keyword)
        (string_literal)
        (section_type)
        (directive
          (simple_directive
            (directive_keyword)
            (argument_list
              (expression
                (number_literal)))))
        (directive_keyword))
      (directive
        (simple_directive
          (directive_keyword)
          (argument_list
            (expression
              (number_literal)))))
      (directive_keyword))))

================================================================================
Blocks: PUSHS outside of section (pushes no-section context)
================================================================================

PUSHS "Test", ROM0
    db 1
POPS

---

(source_file
  (pushs_block
    (directive_keyword)
    (string_literal)
    (section_type)
    (directive
      (simple_directive
        (directive_keyword)
        (argument_list
          (expression
            (number_literal)))))
    (directive_keyword)))

================================================================================
Blocks: PUSHS with instructions and local labels
================================================================================

SECTION "Code", ROM0
Function:
    ld a, 42
    PUSHS "Variables", WRAM0
wAnswer: db
    POPS
    ld [wAnswer], a

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (global_label_block
      (label)
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (expression
              (register))
            (expression
              (number_literal)))))
      (pushs_block
        (directive_keyword)
        (string_literal)
        (section_type)
        (global_label_block
          (label)
          (directive
            (simple_directive
              (directive_keyword))))
        (directive_keyword))
      (instruction_list
        (instruction
          (instruction_name)
          (operand_list
            (address
              (expression
                (symbol)))
            (expression
              (register))))))))

================================================================================
Blocks: PUSHS within LOAD block
================================================================================

SECTION "ROM CODE", ROM0
    ds $80
LOAD "RAM CODE", SRAM
PUSHS "HRAM", HRAM
    ds 1
POPS
ENDL

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (directive
      (ds_directive
        (directive_keyword)
        (expression
          (number_literal))))
    (load_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (pushs_block
        (directive_keyword)
        (string_literal)
        (section_type)
        (directive
          (ds_directive
            (directive_keyword)
            (expression
              (number_literal))))
        (directive_keyword))
      (directive_keyword))))

================================================================================
Blocks: PUSHS with IF/REPT nested blocks
================================================================================

SECTION "Main", ROM0
PUSHS "Data", ROM0
    IF DEF(DEBUG)
        db "Debug data"
    ENDC
    REPT 3
        db 0
    ENDR
POPS

---

(source_file
  (section_block
    (section_directive
      (directive_keyword)
      (string_literal)
      (section_type))
    (pushs_block
      (directive_keyword)
      (string_literal)
      (section_type)
      (directive
        (if_block
          (directive_keyword)
          (expression
            (function_call
              (function_name)
              (expression
                (symbol))))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (string_literal)))))
          (directive_keyword)))
      (directive
        (rept_block
          (directive_keyword)
          (expression
            (number_literal))
          (directive
            (simple_directive
              (directive_keyword)
              (argument_list
                (expression
                  (number_literal)))))
          (directive_keyword)))
      (directive_keyword))))
